[package]
name = "vredditor-api"
version = "0.1.0"
authors = ["Billy J Rhoades II <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protobuf = { version = "2", features = ["with-bytes"] }
url = "2.2"
rusoto = "0.24"
cmd_lib = "0.8"

log = "0.4"
env_logger = "0.8"
failure = "0.1.8"

tokio = { version = "0.3", default-features = false, features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite", rev = "bea9b86", features = ["connect", "stream"] }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

[dev-dependencies]
websocket-lite = "0.4"