[package]
name = "vredditor-api"
version = "0.1.0"
authors = ["Billy J Rhoades II <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
rand = "0.7"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
lazy_static = "1.4"

bytes = "1"
reqwest = { version = "0.10", features = ["stream"] }

serde = "1.0"
serde_json = "1.0"

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "process", "fs"] }
tokio-stream = "0.1"
# https://docs.rs/tokio-compat-02/0.1.2/tokio_compat_02/
# reqwest is on tokio 0.2
tokio-compat-02 = "0.1"
tokio-util = { version = "0.6", features = ["full"] }

futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
async-trait = "0.1"

# bytes 1.0
[dependencies.prost]
git = "https://github.com/danburkert/prost"
rev = "a5bb7bf"

# tokio 1.0
[dependencies.rusoto_core]
git = "https://github.com/benesch/rusoto"
branch = "tokio-10"

# tokio 1.0
[dependencies.rusoto_s3]
git = "https://github.com/benesch/rusoto"
branch = "tokio-10"

# tokio 1.0
[dependencies.tokio-tungstenite]
git = "https://github.com/dnaka91/tokio-tungstenite"
branch = "tokio-1.0"
features = ["connect", "stream"]

[build-dependencies]
prost-build = "0.6"
glob = "0.3"
anyhow = "1.0"

[lib]
name = "lib"
path = "src/lib/lib.rs"